--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <meta name="author" content="阳光">
     <meta name="reply-to" content="82654348@qq.com">
     <meta name="robots" content="all">
-    <meta name="og:image" content="https://leihua666.github.io/yangguang/yuzhou.jpg">
+    <meta name="og:image" content="https://leihua666.github.io/yangguang/yuzhou.png">
     <meta name="og:title" content="阳光">
     <meta name="og:url" content="https://leihua666.github.io/yangguang/">
     <meta name="description" content="阳光的个人网站">
     <link rel="manifest" href="https://leihua666.github.io/yangguang/seochecker-manifest-1809.json">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://leihua666.github.io/yangguang/yuzhou.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://leihua666.github.io/yangguang/yuzhou.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://leihua666.github.io/yangguang/favicon-32.png">
     <link rel="icon" href="https://leihua666.github.io/yangguang/favicon-32.png">
     <link rel="mask-icon" href="https://leihua666.github.io/yangguang/safari-pinned-tab.svg" color="#5bbad5">
