--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="og:url" content="https://leihua666.github.io/yangguang/">
     <meta name="description" content="阳光的个人网站">
     <link rel="manifest" href="https://leihua666.github.io/yangguang/manifest.json">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://leihua666.github.io/yangguang/yuzhou.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://leihua666.github.io/yangguang/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://leihua666.github.io/yangguang/favicon-32.png">
     <link rel="icon" href="https://leihua666.github.io/yangguang/favicon-32.png">
     <link rel="mask-icon" href="https://leihua666.github.io/yangguang/safari-pinned-tab.svg" color="#5bbad5">
