--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="og:title" content="阳光">
     <meta name="og:url" content="https://leihua666.github.io/yangguang/">
     <meta name="description" content="阳光的个人网站">
-    <link rel="manifest" href="https://https://leihua666.github.io/yangguang/manifest.json">
+    <link rel="manifest" href="https://leihua666.github.io/yangguang/manifest.json">
     <link rel="apple-touch-icon" sizes="180x180" href="https://leihua666.github.io/yangguang/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://leihua666.github.io/yangguang/favicon-32.png">
     <link rel="icon" href="https://leihua666.github.io/yangguang/favicon-32.png">
