--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="og:title" content="阳光">
     <meta name="og:url" content="https://leihua666.github.io/yangguang/">
     <meta name="description" content="阳光的个人网站">
-    <link rel="manifest" content="https://leihua666.github.io/yangguang/manifest.json/">
+    <link rel="manifest" content="https://leihua666.github.io/yangguang/manifest.json">
     <link rel="icon" href="https://leihua666.github.io/yangguang/favicon-32.png">
     <link rel="mask-icon" href="https://leihua666.github.io/yangguang/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
