--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="og:title" content="阳光">
     <meta name="og:url" content="https://leihua666.github.io/yangguang/">
     <meta name="description" content="阳光的个人网站">
-   <link rel="manifest" href="C:\Users\雷\Desktop\seochecker-manifest-2610.json">
+   <link rel="manifest" href="/seochecker-manifest-2610.json">
     <link rel="apple-touch-icon" sizes="180x180" href="https://leihua666.github.io/yangguang/yuzhou.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://leihua666.github.io/yangguang/favicon-32.png">
     <link rel="icon" href="https://leihua666.github.io/yangguang/favicon-32.png">
